--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-date-picker": "^7.10.0",
     "react-dom": "^16.12.0",
     "react-moment": "^0.9.7",
+    "react-progress-bar.js": "^0.2.3",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0"
